Update apps folder with app.py, scraping.py, and index html . Also updated Mission_to_Mars_Challenges

--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -27,7 +27,9 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 90.0.4430\n",
       "Get LATEST driver version for 90.0.4430\n",
-      "Driver [C:\\Users\\m_201\\.wdm\\drivers\\chromedriver\\win32\\90.0.4430.24\\chromedriver.exe] found in cache\n"
+      "Get LATEST driver version for 90.0.4430\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/90.0.4430.24/chromedriver_win32.zip\n",
+      "Driver has been saved in cache [C:\\Users\\m_201\\.wdm\\drivers\\chromedriver\\win32\\90.0.4430.24]\n"
      ]
     }
    ],
@@ -81,7 +83,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">Global Storms on Mars Launch Dust Towers Into the Sky</div>"
+       "<div class=\"content_title\">NASA's Curiosity Mars Rover Snaps Its Highest-Resolution Panorama Yet</div>"
       ]
      },
      "execution_count": 5,
@@ -102,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "'Global Storms on Mars Launch Dust Towers Into the Sky'"
+       "\"NASA's Curiosity Mars Rover Snaps Its Highest-Resolution Panorama Yet\""
       ]
      },
      "execution_count": 6,
@@ -126,7 +128,7 @@
     {
      "data": {
       "text/plain": [
-       "'A Mars Dust Tower Stands Out Dust storms are common on Mars. But every decade or so, something unpredictable happens: a series of runaway storms break out, covering the entire planet in a dusty haze.'"
+       "'To go along with the stunning 1.8-billion-pixel image, a new video offers a sweeping view of the Red Planet.'"
       ]
      },
      "execution_count": 7,
@@ -198,7 +200,7 @@
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars2.jpg'"
+       "'image/featured/mars1.jpg'"
       ]
      },
      "execution_count": 11,
@@ -220,7 +222,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
       ]
      },
      "execution_count": 12,
@@ -242,7 +244,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
       ]
      },
      "execution_count": 13,
@@ -494,7 +496,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA Mars Mission Connects With Bosnian and Herzegovinian Town</div>"
+       "<div class=\"content_title\">Q&amp;A with the Student Who Named Ingenuity, NASA's Mars Helicopter</div>"
       ]
      },
      "execution_count": 21,
@@ -514,7 +516,7 @@
     {
      "data": {
       "text/plain": [
-       "'NASA Mars Mission Connects With Bosnian and Herzegovinian Town'"
+       "\"Q&A with the Student Who Named Ingenuity, NASA's Mars Helicopter\""
       ]
      },
      "execution_count": 22,
@@ -536,7 +538,7 @@
     {
      "data": {
       "text/plain": [
-       "'A letter from NASA was presented to the mayor of Jezero, Bosnia-Herzegovina, honoring the connection between the town and Jezero Crater, the Mars 2020 rover landing site.'"
+       "'As a longtime fan of space exploration, Vaneeza Rupani appreciates the creativity and collaboration involved with trying to fly on another planet.'"
       ]
      },
      "execution_count": 23,
@@ -790,7 +792,7 @@
        "<link href=\"js/fancyBox/jquery.fancybox.css?v=2.1.5\" media=\"screen\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<link href=\"js/fancyBox/helpers/jquery.fancybox-thumbs.css?v=1.0.7\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<script src=\"js/fancyBox/helpers/jquery.fancybox-thumbs.js?v=1.0.7\" type=\"text/javascript\"></script>\n",
-       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image\" style=\"width: 670px; height: 380px; position: absolute; top: 147px; left: 174px; opacity: 0.102875; overflow: hidden;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars3.jpg\"/></div></div></div></div></div></body></html>"
+       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image\" style=\"width: 670px; height: 380px; position: absolute; top: 147px; left: 174px; opacity: 0.110229; overflow: hidden;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars3.jpg\"/></div></div></div></div></div></body></html>"
       ]
      },
      "execution_count": 26,
@@ -1102,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1118,6 @@
     "links = browser.find_by_css('a.product-item img')\n",
     "#len(links)\n",
     "\n",
-    "#  MoD 10.5.2\n",
     "\n",
     "for i in range(len(links)):\n",
     "    hemisphere = {}\n",
@@ -1140,8 +1141,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1156,7 +1159,7 @@
        "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
