--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -27,9 +27,7 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 90.0.4430\n",
       "Get LATEST driver version for 90.0.4430\n",
-      "Get LATEST driver version for 90.0.4430\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/90.0.4430.24/chromedriver_win32.zip\n",
-      "Driver has been saved in cache [C:\\Users\\m_201\\.wdm\\drivers\\chromedriver\\win32\\90.0.4430.24]\n"
+      "Driver [C:\\Users\\m_201\\.wdm\\drivers\\chromedriver\\win32\\90.0.4430.24\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -83,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA's Curiosity Mars Rover Snaps Its Highest-Resolution Panorama Yet</div>"
+       "<div class=\"content_title\">AI Is Helping Scientists Discover Fresh Craters on Mars</div>"
       ]
      },
      "execution_count": 5,
@@ -104,7 +102,7 @@
     {
      "data": {
       "text/plain": [
-       "\"NASA's Curiosity Mars Rover Snaps Its Highest-Resolution Panorama Yet\""
+       "'AI Is Helping Scientists Discover Fresh Craters on Mars'"
       ]
      },
      "execution_count": 6,
@@ -128,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "'To go along with the stunning 1.8-billion-pixel image, a new video offers a sweeping view of the Red Planet.'"
+       "\"It's the first time machine learning has been used to find previously unknown craters on the Red Planet.\""
       ]
      },
      "execution_count": 7,
@@ -200,7 +198,7 @@
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars1.jpg'"
+       "'image/featured/mars2.jpg'"
       ]
      },
      "execution_count": 11,
@@ -222,7 +220,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
       ]
      },
      "execution_count": 12,
@@ -244,7 +242,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
       ]
      },
      "execution_count": 13,
@@ -496,7 +494,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">Q&amp;A with the Student Who Named Ingenuity, NASA's Mars Helicopter</div>"
+       "<div class=\"content_title\">The Detective Aboard NASA's Perseverance Rover</div>"
       ]
      },
      "execution_count": 21,
@@ -516,7 +514,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Q&A with the Student Who Named Ingenuity, NASA's Mars Helicopter\""
+       "\"The Detective Aboard NASA's Perseverance Rover\""
       ]
      },
      "execution_count": 22,
@@ -538,7 +536,7 @@
     {
      "data": {
       "text/plain": [
-       "'As a longtime fan of space exploration, Vaneeza Rupani appreciates the creativity and collaboration involved with trying to fly on another planet.'"
+       "'An instrument called SHERLOC will, with the help of its partner WATSON, hunt for signs of ancient life by detecting organic molecules and minerals.'"
       ]
      },
      "execution_count": 23,
@@ -618,9 +616,9 @@
        "<h2 class=\"brand_title\">FEATURED IMAGE</h2>\n",
        "<h1 class=\"media_feature_title\">Dusty Space Cloud</h1>\n",
        "<br/>\n",
-       "<a class=\"showimg fancybox-thumbs\" href=\"image/featured/mars3.jpg\" target=\"_blank\"> <button class=\"btn btn-outline-light\"> FULL IMAGE</button></a>\n",
+       "<a class=\"showimg fancybox-thumbs\" href=\"image/featured/mars1.jpg\" target=\"_blank\"> <button class=\"btn btn-outline-light\"> FULL IMAGE</button></a>\n",
        "</div>\n",
-       "<img class=\"headerimage fade-in\" src=\"image/featured/mars3.jpg\"/></div>\n",
+       "<img class=\"headerimage fade-in\" src=\"image/featured/mars1.jpg\"/></div>\n",
        "<div class=\"search sticky\">\n",
        "<div class=\"col-md-12\">\n",
        "<div class=\"row\">\n",
@@ -792,7 +790,7 @@
        "<link href=\"js/fancyBox/jquery.fancybox.css?v=2.1.5\" media=\"screen\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<link href=\"js/fancyBox/helpers/jquery.fancybox-thumbs.css?v=1.0.7\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<script src=\"js/fancyBox/helpers/jquery.fancybox-thumbs.js?v=1.0.7\" type=\"text/javascript\"></script>\n",
-       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image\" style=\"width: 670px; height: 380px; position: absolute; top: 147px; left: 174px; opacity: 0.110229; overflow: hidden;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars3.jpg\"/></div></div></div></div></div></body></html>"
+       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image\" style=\"width: 670px; height: 380px; position: absolute; top: 147px; left: 174px; opacity: 0.109065; overflow: hidden;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars1.jpg\"/></div></div></div></div></div></body></html>"
       ]
      },
      "execution_count": 26,
@@ -815,7 +813,7 @@
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars3.jpg'"
+       "'image/featured/mars1.jpg'"
       ]
      },
      "execution_count": 27,
@@ -837,7 +835,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars3.jpg'"
+       "'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars1.jpg'"
       ]
      },
      "execution_count": 28,
@@ -1178,6 +1176,20 @@
     "# 5. Quit the browser\n",
     "browser.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
